fix: adjust cross position in button styles for better alignment

--- a/pawa-sure/src/App.css
+++ b/pawa-sure/src/App.css
@@ -487,7 +487,7 @@ button:active{
     .cross{
         position: absolute;
         right: 2.7rem;
-        top: 10.3rem;
+        top: 10.4rem;
 
     }
 
